@@ -1082,6 +1082,14 @@
             </description>
         </attribute>
         <attribute>
+            <name>disabledTabStyleClass</name>
+            <required>false</required>
+            <rtexprvalue>false</rtexprvalue>
+            <description>
+                Style class of the disabled tab cells.
+            </description>
+        </attribute>
+        <attribute>
             <name>activeSubStyleClass</name>
             <required>false</required>
             <rtexprvalue>false</rtexprvalue>
